add css in files for menu

--- a/skin/frontend/codazon_fastest/default/css/styles.css
+++ b/skin/frontend/codazon_fastest/default/css/styles.css
@@ -26748,6 +26748,14 @@ border-bottom: 3px solid #121212; display: inline-block; padding-bottom: 10px;}
 
 
 @media only screen and (max-width: 1024px) and (min-width: 768px) {
+  .groupmenu-drop .groupmenu-6 { width: 770px!important;}
+.groupmenu-1 .customcoloum { width: 125px!important; } 
+.groupmenu-2 .customcoloum { width: 125px!important; }
+.groupmenu-3 .customcoloum { width: 125px!important; }
+.groupmenu-4 .customcoloum { width: 125px!important; } 
+.groupmenu-5 .customcoloum { width: 125px!important; }  
+.groupmenu-6 .customcoloum { width: 125px!important; }
+
 .col1-layout .products-grid .product-items:not(.owl-carousel) .product-item {    width: 25%!important;}
 .col1-layout .products-grid .product-items:not(.owl-carousel) .product-item {width: 25%!important; }
 .col1-layout .products-grid .product-items:not(.owl-carousel) > .product-item .product-item-info {height: 380px!important;}
