--- a/app/design/frontend/codazon_fastest/default/template/sales/order/recent.phtml
+++ b/app/design/frontend/codazon_fastest/default/template/sales/order/recent.phtml
@@ -31,6 +31,7 @@
         <?php if( sizeof($_orders->getItems()) > 0 ): ?><a href="<?php echo $this->getUrl('sales/order/history') ?>"><?php echo $this->__('View All') ?></a><?php endif; ?>
     </div>
 <?php if( sizeof($_orders->getItems()) > 0 ): ?>
+<div class="order-parent"> 
     <table class="data-table" id="my-orders-table">
     <col width="1" />
     <col width="1" />
@@ -78,6 +79,7 @@
             <?php endforeach; ?>
         </tbody>
     </table>
+	</div>
     <script type="text/javascript">decorateTable('my-orders-table')</script>
 <?php else: ?>
     <p><?php echo $this->__('You have placed no orders.'); ?></p>
