--- a/app/design/frontend/codazon_fastest/default/template/codazon_filterproducts/grid.phtml
+++ b/app/design/frontend/codazon_fastest/default/template/codazon_filterproducts/grid.phtml
@@ -28,7 +28,13 @@
 				<div class="cdz-hover-section">
 					<div class="cdz-product-top">
                     <?php if( $this->display('image') ):?>
-                    <a href="<?php echo $_product->getProductUrl() ?>" title="<?php echo $this->stripTags($this->getImageLabel($_product, 'small_image'), null, true) ?>" class="product-image"><img src="<?php echo (string)$_imgHelper->init($_product, 'small_image')->resize($_width,$_height); ?>" alt="<?php echo $this->stripTags($this->getImageLabel($_product, 'small_image'), null, true) ?>" />
+                    <a href="<?php echo $_product->getProductUrl() ?>" title="<?php echo $this->stripTags($this->getImageLabel($_product, 'small_image'), null, true) ?>" class="product-image">
+					<?php $product = Mage::getModel('catalog/product')->load($_product->getId());
+echo $full_path_url = Mage::helper('catalog/image')->init($product, 'small_image')."==1";?>
+					<?php echo  Mage::helper('catalog/image')->init($_product, 'small_image').'==2';?>
+
+					<img src="<?php echo (string)$_imgHelper->init($_product, 'small_image')->resize($_width,$_height); ?>" alt="<?php echo $this->stripTags($this->getImageLabel($_product, 'small_image'), null, true) ?>" />
+					
                     <img src="<?php echo (string)$_imgHelper->init($_product,'thumbnail')->resize($_width, $_height); ?>" alt="<?php echo $this->stripTags($this->getImageLabel($_product, 'thumbnail'), null, true) ?>" class="alternative-img img-responsive" />
                     </a>
                     <?php endif ?>
