--- a/app/design/frontend/codazon_fastest/default/template/codazon_filterproducts/grid.phtml
+++ b/app/design/frontend/codazon_fastest/default/template/codazon_filterproducts/grid.phtml
@@ -30,8 +30,11 @@
                     <?php if( $this->display('image') ):?>
                     <a href="<?php echo $_product->getProductUrl() ?>" title="<?php echo $this->stripTags($this->getImageLabel($_product, 'small_image'), null, true) ?>" class="product-image">
 					<?php  // $imageUrl= Mage::helper('catalog/image')->init($_product, 'image').'==2';?>
-					<img src="<?php echo (string)$_imgHelper->init($_product, 'image')->resize($_width,$_height); ?>" alt="<?php echo $this->stripTags($this->getImageLabel($_product, 'small_image'), null, true) ?>" />
-                    <img src="<?php echo (string)$_imgHelper->init($_product,'thumbnail')->resize($_width, $_height); ?>" alt="<?php echo $this->stripTags($this->getImageLabel($_product, 'thumbnail'), null, true) ?>" class="alternative-img img-responsive" />
+					<img src="<?php echo (string)$_imgHelper->init($_product, 'image')->resize($_width,$_height); ?>" alt="<?php echo $this->stripTags($this->getImageLabel($_product, 'image'), null, true) ?>" />
+					
+					<?php $product = Mage::getModel('catalog/product')->load($_product->getId());
+ $full_path_url = Mage::helper('catalog/image')->init($product, 'thumbnail') ;?>
+                    <img src="<?php echo $full_path_url;?>" alt="<?php echo $this->stripTags($this->getImageLabel($_product, 'image'), null, true) ?>" class="alternative-img img-responsive" />
                     </a>
                     <?php endif ?>
                     </div>
