--- a/app/design/frontend/codazon_fastest/default/template/codazon_filterproducts/grid.phtml
+++ b/app/design/frontend/codazon_fastest/default/template/codazon_filterproducts/grid.phtml
@@ -33,7 +33,7 @@
 					<img src="<?php echo (string)$_imgHelper->init($_product, 'image')->resize($_width,$_height); ?>" alt="<?php echo $this->stripTags($this->getImageLabel($_product, 'image'), null, true) ?>" />
 					
 					<?php $product = Mage::getModel('catalog/product')->load($_product->getId());
- $full_path_url = Mage::helper('catalog/image')->init($product, 'thumbnail') ;?>
+ $full_path_url = Mage::helper('catalog/image')->init($product, 'thumbnail')->resize($_width,$_height); ?>
                     <img src="<?php echo $full_path_url;?>" alt="<?php echo $this->stripTags($this->getImageLabel($_product, 'image'), null, true) ?>" class="alternative-img img-responsive" />
                     </a>
                     <?php endif ?>
