--- a/skin/frontend/codazon_fastest/default/css/styles.css
+++ b/skin/frontend/codazon_fastest/default/css/styles.css
@@ -27073,6 +27073,9 @@ border-color: #282828; color: white; border: 3px solid;}
 .groupmenu-6 .customcoloum { width: 150px; padding: 0 10px; box-sizing: border-box; float: left;}
 
 
+.cdz-buttons-inner .tooltip.top {  margin-top: -3px; padding: 5px 0; left: 60px!important; top: 5px!important;}
+
+
 
 
 
