--- a/app/design/frontend/codazon_fastest/default/template/onestepcheckout/onepage/review/info.phtml
+++ b/app/design/frontend/codazon_fastest/default/template/onestepcheckout/onepage/review/info.phtml
@@ -14,10 +14,10 @@
         <thead>
             <tr>
             
-                <th><?php echo $this->__('Product Name') ?></th>
-                <th rowspan="<?php echo $rowspan ?>">&nbsp;</th><!-- Here's the empty col for the image -->
-                <th class="a-center"><?php echo $this->__('Qty') ?></th>
-                <th class="a-right" colspan="<?php echo $colspan ?>"><?php echo $this->__('Subtotal') ?></th>
+                <th class="review-one"><?php echo $this->__('Product Name') ?></th>
+                <th class="review-two" rowspan="<?php echo $rowspan ?>">&nbsp;</th><!-- Here's the empty col for the image -->
+                <th class="a-center review-three"><?php echo $this->__('Qty') ?></th>
+                <th class="a-right review-four" colspan="<?php echo $colspan ?>"><?php echo $this->__('Subtotal') ?></th>
             </tr>
         </thead>
         <?php echo $this->getChildHtml('totals'); ?>
