--- a/skin/frontend/codazon_fastest/default/css/styles.css
+++ b/skin/frontend/codazon_fastest/default/css/styles.css
@@ -27074,7 +27074,7 @@ border-color: #282828; color: white; border: 3px solid;}
 
 table.order-products-table {display: table;}
 table.order-products-table thead tr {    display: table-row;}
-table.order-products-table thead tr td {    display: table-cell;}
+table.order-products-table thead tr th {    display: table-cell;}
 
 
 
