add class in file

--- a/app/design/frontend/codazon_fastest/default/template/onestepcheckout/onepage/review/info.phtml
+++ b/app/design/frontend/codazon_fastest/default/template/onestepcheckout/onepage/review/info.phtml
@@ -1,6 +1,6 @@
 <?php echo $this->getChildHtml('items_before'); ?>
 <div id="checkout-review-table-wrapper">
-    <table class="order-products-table" id="checkout-review-table">
+    <table class="order-products-table cust-reviewss" id="checkout-review-table">
         <col />
         <col width="1" />
         <col width="1" />
