--- a/skin/frontend/codazon_fastest/default/css/styles.css
+++ b/skin/frontend/codazon_fastest/default/css/styles.css
@@ -26738,11 +26738,11 @@ border-bottom: 3px solid #121212; display: inline-block; padding-bottom: 10px;}
 
 }
 
-@media only screen and (max-width: 1150px) and (min-width: 1025px) {
+@media only screen and (max-width: 1150px) and (min-width: 1025px) { 
 table.cust-reviewss thead tr th.review-one { width: 70px; max-width: 70px;  min-width: 70px;}
 table.cust-reviewss thead tr th.review-two { min-width: 110px;  width: 110px;  max-width: 110px;} 
-table.cust-reviewss thead tr th.review-three { width: 60px;  max-width: 60px; min-width: 60px;} 
-table.cust-reviewss thead tr th.review-four { width: auto; max-width: inherit; min-width: auto;}
+table.cust-reviewss thead tr th.review-three { width: 30px!important;  max-width: 30px!important; min-width: 30px!important;} 
+table.cust-reviewss thead tr th.review-four { width: auto!important; max-width: inherit!important; min-width: auto!important;}
 
 }
 
