--- a/skin/frontend/base/default/css/onestepcheckout.css
+++ b/skin/frontend/base/default/css/onestepcheckout.css
@@ -295,12 +295,12 @@ input[type="email"], input[type="search"], input[type="number"], input[type="pas
   	display:inline-block !important;
   }
 }
-@media only screen and (max-width: 640px) {
+@media only screen and (max-width: 640px) { 
 	  .order-products-table td
   {
-  	width:100% !important;
+/*  	width:100% !important;
   	float:left;
-  	text-align:left;
+  	text-align:left;*/
   }
   .op_login_area
   {
