--- a/skin/frontend/codazon_fastest/default/css/styles.css
+++ b/skin/frontend/codazon_fastest/default/css/styles.css
@@ -27096,12 +27096,50 @@ table.cust-reviewss thead tr th.review-four {    width: 80px;  max-width: 80px; 
 
 .cdz-product-bottom .cdz-tooltip {position: relative;}
 .cdz-product-bottom .cdz-tooltip:before { max-width: 200px;
-    padding: 3px 8px;
-    color: #fff; content: 'Quick Shop'; opacity: 1; visibility: hidden;
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    padding: 8px 0px;
+    color: #fff;
+    content: 'Quick Shop';
+    opacity: 1;
+    visibility: hidden;
     text-align: center;
     background-color: #000;
-    border-radius: 4px;}
-.cdz-product-bottom .cdz-tooltip:hover:before {opacity: 1; visibility: visible;}
+    border-radius: 4px;
+    position: absolute;
+    top: -45px;
+    left: 50%;
+    font-size: 11px;
+    min-width: 100px;
+    opacity: 0.9;
+    margin-left: -50px;
+    display: inline-block;
+    line-height: normal;}
+.cdz-product-bottom .cdz-tooltip:hover:before {opacity: 1; visibility: visible;} 
+
+
+.cdz-product-bottom .cdz-buttons-inner .btn-cart {position: relative;}
+.cdz-product-bottom .cdz-buttons-inner .btn-cart:before { max-width: 200px;
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    padding: 8px 0px;
+    color: #fff;
+    content: 'Quick Shop';
+    opacity: 1;
+    visibility: hidden;
+    text-align: center;
+    background-color: #000;
+    border-radius: 4px;
+    position: absolute;
+    top: -45px;
+    left: 50%;
+    font-size: 11px;
+    min-width: 100px;
+    opacity: 0.9;
+    margin-left: -50px;
+    display: inline-block;
+    line-height: normal;}
+.cdz-product-bottom .cdz-buttons-inner .btn-cart:hover:before {opacity: 1; visibility: visible;}
+
+.cdz-product-bottom .cdz-buttons-inner .tooltip.fade {display: none;}  
 
 
 
