--- a/skin/frontend/codazon_fastest/default/css/styles.css
+++ b/skin/frontend/codazon_fastest/default/css/styles.css
@@ -27095,7 +27095,7 @@ table.cust-reviewss thead tr th.review-three {    width: 80px;  max-width: 80px;
 table.cust-reviewss thead tr th.review-four {    width: 80px;  max-width: 80px;  min-width: 100px;}
 
 .cdz-product-bottom .cdz-tooltip {position: relative;}
-.cdz-product-bottom .cdz-tooltip:before { max-width: 200px;
+.cdz-product-bottom .cdz-tooltip:after { max-width: 200px;
     font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
     padding: 8px 0px;
     color: #fff;
@@ -27114,11 +27114,11 @@ table.cust-reviewss thead tr th.review-four {    width: 80px;  max-width: 80px; 
     margin-left: -50px;
     display: inline-block;
     line-height: normal;}
-.cdz-product-bottom .cdz-tooltip:hover:before {opacity: 1; visibility: visible;} 
+.cdz-product-bottom .cdz-tooltip:hover:after {opacity: 1; visibility: visible;} 
 
 
 .cdz-product-bottom .cdz-buttons-inner .btn-cart {position: relative;}
-.cdz-product-bottom .cdz-buttons-inner .btn-cart:before { max-width: 200px;
+.cdz-product-bottom .cdz-buttons-inner .btn-cart:after { max-width: 200px;
     font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
     padding: 8px 0px;
     color: #fff;
@@ -27137,9 +27137,9 @@ table.cust-reviewss thead tr th.review-four {    width: 80px;  max-width: 80px; 
     margin-left: -50px;
     display: inline-block;
     line-height: normal;}
-.cdz-product-bottom .cdz-buttons-inner .btn-cart:hover:before {opacity: 1; visibility: visible;}
+.cdz-product-bottom .cdz-buttons-inner .btn-cart:hover:after {opacity: 1; visibility: visible;}
 
-.cdz-product-bottom .cdz-buttons-inner .tooltip.fade {display: none;}  
+.cdz-product-bottom .cdz-buttons-inner .tooltip.fade {display: none!important;}  
 
 
 
