--- a/skin/frontend/codazon_fastest/default/css/styles.css
+++ b/skin/frontend/codazon_fastest/default/css/styles.css
@@ -27100,7 +27100,7 @@ table.cust-reviewss thead tr th.review-four {    width: 80px;  max-width: 80px; 
     padding: 8px 0px;
     color: #fff;
     content: 'Quick Shop';
-    opacity: 1;
+    opacity: 1; font-weight: 600;
     visibility: hidden;
     text-align: center;
     background-color: #000;
@@ -27122,7 +27122,7 @@ table.cust-reviewss thead tr th.review-four {    width: 80px;  max-width: 80px; 
     font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
     padding: 8px 0px;
     color: #fff;
-    content: 'Add to Cart'; 
+    content: 'Add to Cart'; font-weight: 600;  
     opacity: 1;
     visibility: hidden;
     text-align: center;
