--- a/skin/frontend/codazon_fastest/default/css/styles.css
+++ b/skin/frontend/codazon_fastest/default/css/styles.css
@@ -27093,53 +27093,28 @@ table.cust-reviewss thead tr th.review-one {    width: 70px; max-width: 70px;  m
 table.cust-reviewss thead tr th.review-two {    min-width: 110px;  width: 110px;    max-width: 110px;}
 table.cust-reviewss thead tr th.review-three {    width: 80px;  max-width: 80px;  min-width: 80px;}
 table.cust-reviewss thead tr th.review-four {    width: 80px;  max-width: 80px;  min-width: 100px;}
-
 .cdz-product-bottom .cdz-tooltip {position: relative;}
 .cdz-product-bottom .cdz-tooltip:after { max-width: 200px;
-    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
-    padding: 8px 0px;
-    color: #fff;
-    content: 'Quick Shop';
-    opacity: 1; font-weight: 600;
-    visibility: hidden;
-    text-align: center;
-    background-color: #000;
-    border-radius: 4px;
-    position: absolute;
-    top: -45px;
-    left: 50%;
-    font-size: 11px;
-    min-width: 100px;
-    opacity: 0.9;
-    margin-left: -50px;
-    display: inline-block;
-    line-height: normal;}
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif; 
+    padding: 8px 0px;  color: #fff;
+    content: 'Quick Shop';  opacity: 1; font-weight: 600;
+    visibility: hidden;  text-align: center;
+    background-color: #000; border-radius: 4px;
+    position: absolute; top: -45px; left: 50%;
+    font-size: 11px;  min-width: 100px; opacity: 0.9;
+    margin-left: -50px;  display: inline-block; line-height: normal;}
 .cdz-product-bottom .cdz-tooltip:hover:after {opacity: 1; visibility: visible;} 
-
-
 .cdz-product-bottom .cdz-buttons-inner .btn-cart {position: relative;}
 .cdz-product-bottom .cdz-buttons-inner .btn-cart:after { max-width: 200px;
     font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
-    padding: 8px 0px;
-    color: #fff;
-    content: 'Add to Cart'; font-weight: 600;  
-    opacity: 1;
-    visibility: hidden;
-    text-align: center;
-    background-color: #000;
-    border-radius: 4px;
-    position: absolute;
-    top: -45px;
-    left: 50%;
-    font-size: 11px;
-    min-width: 100px;
-    opacity: 0.9;
-    margin-left: -50px;
-    display: inline-block;
-    line-height: normal;}
+    padding: 8px 0px;  color: #fff; content: 'Add to Cart'; font-weight: 600;  
+    opacity: 1;  visibility: hidden; text-align: center;
+    background-color: #000;  border-radius: 4px;  position: absolute;
+    top: -45px; left: 50%;  font-size: 11px;  min-width: 100px;
+    opacity: 0.9;  margin-left: -50px; display: inline-block;  line-height: normal;}
 .cdz-product-bottom .cdz-buttons-inner .btn-cart:hover:after {opacity: 1; visibility: visible;}
 .cdz-product-bottom .cdz-buttons-inner .tooltip.fade {display: none!important;}   
-.totals-content ul.checkout-types li button.button {    padding: 7px 15px;}  
+.totals-content ul.checkout-types li button.button {    padding: 7px 15px;}   
 
 
 
